{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 95,
  "lineage": "5284d88b-533b-24fa-1847-ee90ccc81cfe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:781630817723:instance/i-0f50afa1087ea62a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f50afa1087ea62a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "custom_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8c93a020cffb257",
            "private_dns": "ip-10-10-0-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.84",
            "public_ip": "3.92.177.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "IaC": "Terraform",
                  "IaC_version": "1.10.5",
                  "cloud": "AWS",
                  "env": "Dev",
                  "name": "Test",
                  "owner": "BFSP"
                },
                "tags_all": {
                  "IaC": "Terraform",
                  "IaC_version": "1.10.5",
                  "cloud": "AWS",
                  "env": "Dev",
                  "name": "Test",
                  "owner": "BFSP"
                },
                "throughput": 125,
                "volume_id": "vol-027ed4811837c01f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027749c84812e460f",
            "tags": {
              "Name": "apache"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "apache",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8921aecf1b6458e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:781630817723:instance/i-054c369188b184db0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054c369188b184db0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "custom_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051d546eb1b455627",
            "private_dns": "ip-10-10-0-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.116",
            "public_ip": "3.86.100.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "IaC": "Terraform",
                  "IaC_version": "1.10.5",
                  "cloud": "AWS",
                  "env": "Dev",
                  "name": "Test",
                  "owner": "BFSP"
                },
                "tags_all": {
                  "IaC": "Terraform",
                  "IaC_version": "1.10.5",
                  "cloud": "AWS",
                  "env": "Dev",
                  "name": "Test",
                  "owner": "BFSP"
                },
                "throughput": 125,
                "volume_id": "vol-0aaf1d8786dda75c2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027749c84812e460f",
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "mysql",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8921aecf1b6458e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:781630817723:instance/i-0267c6389c754d2e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0267c6389c754d2e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "custom_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dbd3cb37b9a9f99a",
            "private_dns": "ip-10-10-0-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.253",
            "public_ip": "54.227.115.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "IaC": "Terraform",
                  "IaC_version": "1.10.5",
                  "cloud": "AWS",
                  "env": "Dev",
                  "name": "Test",
                  "owner": "BFSP"
                },
                "tags_all": {
                  "IaC": "Terraform",
                  "IaC_version": "1.10.5",
                  "cloud": "AWS",
                  "env": "Dev",
                  "name": "Test",
                  "owner": "BFSP"
                },
                "throughput": 125,
                "volume_id": "vol-0ff9925fac6e63b17",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027749c84812e460f",
            "tags": {
              "Name": "jumpserver"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "jumpserver",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8921aecf1b6458e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781630817723:internet-gateway/igw-01ba10ad7991bf3ca",
            "id": "igw-01ba10ad7991bf3ca",
            "owner_id": "781630817723",
            "tags": {
              "Name": "Internet Gateway Virginia"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "Internet Gateway Virginia",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            },
            "vpc_id": "vpc-0192e0590198c1428"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781630817723:route-table/rtb-0186e66a9f78d3899",
            "id": "rtb-0186e66a9f78d3899",
            "owner_id": "781630817723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ba10ad7991bf3ca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "Public route",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0192e0590198c1428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077da78e6d1131be8",
            "route_table_id": "rtb-0186e66a9f78d3899",
            "subnet_id": "subnet-027749c84812e460f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781630817723:security-group/sg-0a8921aecf1b6458e",
            "description": "Allow SSH inbound traffic and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8921aecf1b6458e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public instance security group",
            "name_prefix": "",
            "owner_id": "781630817723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public instance security group"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "Public instance security group",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0192e0590198c1428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781630817723:subnet/subnet-091c57823c34dd7bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091c57823c34dd7bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781630817723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "Private subnet",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            },
            "vpc_id": "vpc-0192e0590198c1428"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781630817723:subnet/subnet-027749c84812e460f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027749c84812e460f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781630817723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "Public subnet",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            },
            "vpc_id": "vpc-0192e0590198c1428"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781630817723:vpc/vpc-0192e0590198c1428",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a199383f2f04f90d",
            "default_route_table_id": "rtb-02a8f3073eff32b99",
            "default_security_group_id": "sg-0647f19b4b58f9c59",
            "dhcp_options_id": "dopt-00e15082efc974240",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0192e0590198c1428",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a8f3073eff32b99",
            "owner_id": "781630817723",
            "tags": {
              "Name": "VPC Virginia"
            },
            "tags_all": {
              "IaC": "Terraform",
              "IaC_version": "1.10.5",
              "Name": "VPC Virginia",
              "cloud": "AWS",
              "env": "Dev",
              "name": "Test",
              "owner": "BFSP"
            }
          }
        }
      ]
    }
  ]
}